# gokart-titanic

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: pythonpackage.yml
conf/: param.ini
src/: __init__.py  main.py
src/inference/: lgbm.py
src/load_data/infer/: load_csv.py
src/load_data/train/: load_csv.py
src/model/: sample.py
src/preprocess/common/: encode.py
src/preprocess/train/: drop_target.py  get_target.py
src/training/: lgbm.py
src/utils/: template.py
test/unit_test/: test_sample.py
